# Time-Of-Flight-Based-Fill-Level-Detection-System

./: .gitignore  CMakeLists.txt  README.md
libsynexens3-v0.7.3.0-ubuntu18.04_x64-202303101119/include/: version.h
libsynexens3-v0.7.3.0-ubuntu18.04_x64-202303101119/include/libsynexens3/: frame.h  process-engine.h  sensor.h  types.h
libsynexens3-v0.7.3.0-ubuntu18.04_x64-202303101119/include/platform/: platform-interface.h  uvc-xu-def.h
libsynexens3-v0.7.3.0-ubuntu18.04_x64-202303101119/include/platform/base/: uvc-base-camera.h
libsynexens3-v0.7.3.0-ubuntu18.04_x64-202303101119/lib/ubuntu18.04_x64/: libsynexens3.so.0.7
src/: main.cpp
src/Facade/: Facade.cpp  Facade.h
src/PCDWorkingDir/: background.pcd
src/PointCloud/: PointCloud.cpp  PointCloud.h
src/ToF_Camera/: ToFCamera.cpp  ToFCamera.h
src/Volume/: Volume.cpp  Volume.h
